2006-11-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* control.c, sfcBroker.c, README, man/sfcbd.1.pre.in: 
	Fixed 1603796: automatic provider grouping is now enabled by default.

	* configure.ac, Makefile.am: 
	Minor enhancements for build systems without bison and multi-processor
	compiles.

2006-11-24  Adrian Schuur, Viktor Mihajlovski

	* args.c, cimXmlParser.c, cimXmlParser.h, classProvider.c, 
	classProviderGz.c, classProviderMem.c, cmpios.h, configure.ac, 
	constClass.c, fileRepository.c, objectImpl.c, objectImpl.h,
	providerDrv.c, providerMgr.c, providerMgr.h, qualifier.c, result.c:
	Fixed 1414618: corrected a bunch of platform dependencies: mainly sizes,
	alignment and endianness in the object implementation.

2006-11-23  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* cimXmlRequest.c, providerMgr.c:
	Fixed 1601644: added more timing traces.

2006-11-23  Sven Schuetz
	* interopProvider.c, internalProvider.c:
	Fixed 1601174: fixed interopProvider segfault

2006-11-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* configure.ac, interop.mof, interopServerProvider.c: 
	Fixed 1601274: fixed __namespace support.

	* brokerUpc.c: 
	Fixed 1601219: don't return bogus enumeration results by allocating an
	empty result array.

	* instance.c, objectpath.c, value.c: 
	Fixed 1600707: added more checks for null strings (and other encapsulated
	datatypes)

	* objectpath.c: 
	Fixed 1601005: added missing function setHostAndNameSpaceFromObjectPath.

2006-11-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* providerDrv.c, providerMgr.c, configure.ac, README: 
	Fixed 1193881: added new configuration option to specify the enumeration
	behavior. In both cases, the correct number of instances is returned now.

2006-11-21  Sven Schuetz
	* sfcbrepos.sh.in, Makefile.am, interop.mof, indication.mof, README
	Fixed 1599697: sfcbrepos include default mofs
