@@ -1,3 +1,8 @@
+2006-11-29  Sven Schuetz
+	* cimXmlOps.y, internalProvider.c, providerDrv.c, instance.c, indication.mof,
+	native.h:
+	Fixed 1605216: empty propertyList causes parser error
+
 2006-11-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* control.c, sfcBroker.c, README, man/sfcbd.1.pre.in: 
